--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@unocss/reset": "^0.57.4",
     "@vueuse/integrations": "^10.6.1",
     "@vueuse/math": "^10.6.1",
+    "animate.css": "^4.1.1",
     "interactjs": "^1.10.21",
     "matter-attractors": "^0.1.6",
     "matter-js": "^0.19.0",
